tests/typing/fail/infer_u32_expr_i32.crs
fn main() i32 {
    var a = 2u32;
    return a + 3i32;
}

fn test(a : f32) f32 {
    var b = a;
    var c = 2.0;
    return b * c;
}
